# emela

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  nightly.yml  release-plz.yml  release.yml
backends/wasm-wasi/: runtime.wat
crates/emela/: Cargo.toml
crates/emela-backend-js/src/: lib.rs
crates/emela-backend-wasm-wasip2/src/: lib.rs
crates/emela-backend-wasm/src/: lib.rs
crates/emela-codegen/src/: backend.rs  intrinsic.rs  ir.rs  ir_walk.rs  lib.rs  manifest.rs  platform.rs  plugin.rs  rc.rs  text.rs  types.rs
crates/emela-wasm/: Cargo.toml
crates/emela/src/: api.rs  ast.rs  driver.rs  error.rs  external.rs  fmt.rs  fs_host.rs  host_abi.rs  http_host.rs  imports.rs  lexer.rs  lib.rs  lint.rs  lower.rs  parser.rs  prelude.rs  random_host.rs  resolve.rs  run.rs  socket_host.rs  test_runner.rs  typecheck.rs
crates/emela/src/lsp/: analysis.rs  code_action.rs  completion.rs  documents.rs  hover.rs  mod.rs  position.rs  protocol.rs  rpc.rs  server.rs
crates/emela/src/pome/: bushel.rs  capability.rs  git.rs  lock.rs  manifest.rs  mod.rs  resolve.rs  semver.rs  source_path.rs  toml_lite.rs
crates/emela/src/std/: bytes.emel  clock.emel  core.emel  float.emel  fs.emel  http.emel  io.emel  random.emel  string.emel
crates/emela/tests/: bitwise.rs  bytes.rs  capability_manifest.rs  comparison.rs  effects.rs  fmt.rs  fs.rs  generic_enums.rs  generic_records.rs  generics.rs  host_interface.rs  http_server.rs  intrinsic.rs  lint.rs  logical.rs  lsp.rs  minimal_cli.rs  multiline.rs  pipe.rs  platform.rs  pome_cli.rs  random.rs  run.rs  socket_run.rs  stdlib_list.rs  stdlib_util.rs  traits.rs  unit_testing.rs  wasm_examples.rs
docs/: ARCHITECTURE.md  lsp.md  syntax-highlight.md
editors/: emela.sublime-syntax
editors/nvim/ftdetect/: emela.vim
editors/nvim/syntax/: emela.vim
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: emela.tmLanguage.json
examples/: add.emel  effects.emel  error_handling.emel  function_values.emel  generics.emel  hello.emel  maximal.emel  minimal.emel  print_int.emel  result.emel  string.emel
examples/imports/: geometry.emel  main.emel
examples/stdlib/: main.emel
examples/stdlib/src/: bool.emel  clock.emel  int.emel  io.emel  list.emel  option.emel  options.emel  ord.emel
src/: ast.rs  codegen.rs  driver.rs  error.rs  external.rs  lexer.rs  main.rs  parser.rs  platform.rs  typecheck.rs
src/backend/: bundled.rs  external.rs  lowering.rs  mod.rs  native.rs  wasm.rs
src/package/: cache.rs  fetch.rs  manifest.rs  mod.rs
tests/: bundled_assets.rs
