[workspace]
resolver = "2"
members = [
    "crates/emela-codegen",
    "crates/emela-backend-js",
    "crates/emela-backend-wasm",
    "crates/emela",
    "crates/emela-wasm",
]
# `emela-wasm` is a wasm-bindgen cdylib built via wasm-pack for the browser
# playground; keep it out of the default set so plain `cargo build`/`cargo test`
# don't pull in wasm-bindgen.
default-members = [
    "crates/emela-codegen",
    "crates/emela-backend-js",
    "crates/emela-backend-wasm",
    "crates/emela",
]

[workspace.package]
edition = "2024"
version = "0.3.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wat = "1"
wasmparser = "0.252"
# In-process WASI runtime for `emela run` (pure Rust, keeps the "no external
# wasm tools" build and cross-compiles with the release matrix).
wasmi = "1"
emela-codegen = { path = "crates/emela-codegen", version = "0.3.0" }
emela-backend-js = { path = "crates/emela-backend-js", version = "0.3.0" }
emela-backend-wasm = { path = "crates/emela-backend-wasm", version = "0.3.0" }
emela = { path = "crates/emela", version = "0.3.0" }
