[workspace]
resolver = "2"
members = [
    "crates/emela-codegen",
    "crates/emela-backend-js",
    "crates/emela-backend-wasm",
    "crates/emela-backend-wasm-wasip2",
    "crates/emela",
    "crates/emela-wasm",
]
# `emela-wasm` is a wasm-bindgen cdylib built via wasm-pack for the browser
# playground; keep it out of the default set so plain `cargo build`/`cargo test`
# don't pull in wasm-bindgen.
default-members = [
    "crates/emela-codegen",
    "crates/emela-backend-js",
    "crates/emela-backend-wasm",
    "crates/emela-backend-wasm-wasip2",
    "crates/emela",
]

[workspace.package]
edition = "2024"
version = "0.8.1"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wat = "1"
wasmparser = "0.252"
# Component-model encoding for the `wasm-wasip2` backend (spec 0052): wraps a
# core module into a WASI 0.2 component. Pure Rust (Bytecode Alliance), so it
# keeps the "no external wasm tools / cross-compiles" build property; `wasmtime`
# (native) is NOT bundled — generated components run under an external runtime.
wit-component = "0.252"
wit-parser = "0.252"
# In-process WASI runtime for `emela run` (pure Rust, keeps the "no external
# wasm tools" build and cross-compiles with the release matrix).
wasmi = "1"
# OS entropy source for the `emela run` host of the `Random` capability (spec
# 0054). Pulled in only behind emela's native `run` feature, so the wasm
# playground never compiles it.
getrandom = "0.2"
# Argument parsing for the `emela` CLI: derive-based subcommands with generated
# `--help`/`--version`. Pulled in only behind emela's default `cli` feature, so
# the wasm playground (which never enters the CLI) does not compile it.
clap = { version = "4", features = ["derive"] }
emela-codegen = { path = "crates/emela-codegen", version = "0.8.1" }
emela-backend-js = { path = "crates/emela-backend-js", version = "0.8.1" }
emela-backend-wasm = { path = "crates/emela-backend-wasm", version = "0.8.1" }
emela-backend-wasm-wasip2 = { path = "crates/emela-backend-wasm-wasip2", version = "0.8.1" }
emela = { path = "crates/emela", version = "0.8.1" }
