[package]
name = "emela"
version.workspace = true
edition.workspace = true
build = "build.rs"
license = "Apache-2.0"
description = "The Emela compiler frontend and CLI."

[lib]
name = "emela"
path = "src/lib.rs"

[[bin]]
name = "emela"
path = "src/main.rs"

[dependencies]
emela-codegen.workspace = true
serde.workspace = true
serde_json.workspace = true
emela-backend-js = { workspace = true, optional = true }
emela-backend-wasm = { workspace = true, optional = true }
emela-backend-wasm-wasip2 = { workspace = true, optional = true }
wasmi = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
# Argument parsing for the CLI (`emela::run`). The compiler and CLI ship as one
# crate, so the wasm playground compiles clap too; it never enters `run()`, so
# clap is dead-stripped from the final module.
clap = { workspace = true }

[dev-dependencies]
# `tests/rc_reclaim.rs` instantiates built modules directly to read the
# `live_bytes` export (spec 0048 reclamation checks).
wasmi = { workspace = true }

[features]
default = ["backend-js", "backend-wasm", "backend-wasm-wasip2", "run"]
backend-js = ["dep:emela-backend-js"]
backend-wasm = ["dep:emela-backend-wasm"]
backend-wasm-wasip2 = ["dep:emela-backend-wasm-wasip2"]
# `emela run` executes the wasm-wasi output in-process via wasmi; it needs the
# wasm backend to produce the module.
run = ["dep:wasmi", "dep:getrandom", "backend-wasm"]
